--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
      justify-content: center;
      align-items: center;
  }
- main {
+ .dayBG {
      width: 90px;
      padding: 1px;
      display: flex;
@@ -14,8 +14,17 @@
 
      border: 1px rgb(209, 206, 206) solid;
      border-radius: 20px;
-     transition: 5000ms all ease;
  }
+ .nightBG {
+    width: 90px;
+    padding: 1px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    border: 1px rgb(209, 206, 206) solid;
+    border-radius: 20px;
+}
  .day {
      width: 40px;
      height: 40px;
@@ -24,7 +33,6 @@
      border-radius: 50%;
 
      /*background-color: rgb(7, 7, 90);*/
-     transition: 5000ms all ease;
  }
  .night {
     width: 40px;
