--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
- body {
+ .dayBody {
      height: 100vh;
      margin: 0;
      display: flex;
      justify-content: center;
      align-items: center;
+
+     background-color: rgb(24, 24, 148);
  }
+ .nightBody {
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgb(0, 0, 0);
+}
  .dayBG {
      width: 90px;
      padding: 1px;
@@ -33,6 +44,7 @@
      border-radius: 50%;
 
      /*background-color: rgb(7, 7, 90);*/
+     background-color: rgba(255, 255, 0, 0.76);
  }
  .night {
     width: 40px;
@@ -41,7 +53,7 @@
     outline: none;
     border-radius: 50%;
 
-    background-color: rgb(7, 7, 90);
+    background-color: white;
  }
  .day:hover {
      cursor: pointer;
