--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
      justify-content: center;
      align-items: center;
 
-     background-color: rgb(24, 24, 148);
+     background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
      transition: 1000ms all ease;
  }
  .nightBody {
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: rgb(0, 0, 0);
+    background-image: linear-gradient(to top, #0b1f3a 0%, #344d5f 100%);
 }
  .dayBG {
      width: 90px;
@@ -23,7 +23,7 @@
      align-items: center;
      padding: 1px ;
 
-     border: 1px rgb(209, 206, 206) solid;
+     border: 1px rgb(167, 164, 164) solid;
      border-radius: 20px;
  }
  .nightBG {
@@ -44,9 +44,8 @@
      outline: none;
      border-radius: 50%;
 
-     /*background-color: rgb(7, 7, 90);*/
-     background-color: rgba(255, 255, 0, 0.76);
-     transition: left 500ms ease-in-out;
+     background-image: linear-gradient(to right, #ec6c49 10%, #f9d423 100%);
+     transition: left 300ms ease;
  }
  .night {
     position: relative;
@@ -57,7 +56,8 @@
     outline: none;
     border-radius: 50%;
 
-    background-color: white;
+    background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898; 
+    background-blend-mode: multiply,multiply;
  }
  .day:hover {
      cursor: pointer;
